Cadastro de usuário + Registro de vacina (1)

--- a/projeto-saude/backend/.env
+++ b/projeto-saude/backend/.env
@@ -2,3 +2,5 @@ NEWS_API_KEY=85243984d7074965afb8c18631b664cd
 GOOGLE_API_KEY=AIzaSyAUP4ZMYz7uA7VpyHdsjOfaLaczSKof2oU
 JWT_SECRET=your_jwt_secret
 PORT=4000
+BACK4APP_APP_ID=JfjKNRlRmzg6vmfwg7f2GftlHAX1guvc9QIz5Wnr
+BACK4APP_REST_KEY=45oTvpI9auzTzAnjMRajxHjsVqJLc7MouOCDlQsR
